Upgrade libs