@@ -6,23 +6,23 @@
 
     <groupId>ktest</groupId>
     <artifactId>ktest</artifactId>
-    <version>1.0.24</version>
+    <version>1.0.25</version>
 
     <properties>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.18.4</quarkus.platform.version>
+        <quarkus.platform.version>3.25.2</quarkus.platform.version>
         <compiler-plugin.version>3.14.0</compiler-plugin.version>
         <surefire-plugin.version>3.5.3</surefire-plugin.version>
-        <jandex-plugin.version>3.3.0</jandex-plugin.version>
+        <jandex-plugin.version>3.4.0</jandex-plugin.version>
         <maven.compiler.source>24</maven.compiler.source>
         <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.parameters>true</maven.compiler.parameters>
-        <avro-plugin.version>1.12.0</avro-plugin.version>
-        <avro-serializer.version>7.9.0</avro-serializer.version>
+        <avro-serializer.version>7.9.2</avro-serializer.version>
         <jsonassert.version>1.5.3</jsonassert.version>
         <fastexcel.version>0.19.0</fastexcel.version>
+        <bouncy-castle.version>2.1.20</bouncy-castle.version>
     </properties>
 
     <dependencyManagement>
@@ -88,6 +88,15 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bctls-fips</artifactId>
+            <version>${bouncy-castle.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.strimzi</groupId>
             <artifactId>kafka-oauth-client</artifactId>
         </dependency>
@@ -131,7 +140,7 @@
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
                     </systemPropertyVariables>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>--enable-preview --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -143,28 +152,10 @@
                     <execution>
                         <goals>
                             <goal>build</goal>
-                            <!-- goal>generate-code</goal>
-                            <goal>generate-code-tests</goal -->
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
                             <goal>native-image-agent</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.avro</groupId>
-                <artifactId>avro-maven-plugin</artifactId>
-                <version>${avro-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>schema</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirectory>src/test/avro</sourceDirectory>
-                            <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
-                            <stringType>String</stringType>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
